add header, footer using include
include ./partials/header
include ./partials/footer

--- a/views/base.pug
+++ b/views/base.pug
@@ -3,4 +3,6 @@ html
     head
         title Node.js 로 시작하는 웹 프로그래밍
     body
+        include ./partials/header
         block content
+        include ./partials/footer
