--- a/day2-http-get-post/views/watcha.pug
+++ b/day2-http-get-post/views/watcha.pug
@@ -4,10 +4,15 @@ block content
     h1 Watcha News
     p 총 #{newsItems.length} 개의 영화 정보가 있습니다.
 
+    // action : 어떤 주소에 http 요청을 보내는가 / http method 는 어떤방식인가
+    // 그런데 둘다 디폴트(자기자신, GET방식)이므로 안써도됨
+    form(action="/wathca/", method="GET")
+        input(type="text" name="query" placeholder="검색어")
+        input(type="submit" value="검색")        
 
     ul
         each newsItem in newsItems
             li
                 img(src=newsItem.image)
                 h2 제목: #{newsItem.title}
-                p #{newsItems.content}
+                p= newsItems.content
