--- a/day2-http-get-post/views/watcha.pug
+++ b/day2-http-get-post/views/watcha.pug
@@ -18,4 +18,4 @@ block content
             li
                 img(src=newsItem.image)
                 h2 제목: #{newsItem.title}
-                p= newsItems.content
+                p= newsItem.content
