--- a/day2-http-get-post/views/users.pug
+++ b/day2-http-get-post/views/users.pug
@@ -3,6 +3,10 @@ extends ./base
 block content
     h1 User list ( #{users.length} )
 
+    form(action="/users/" method="GET")
+        input(type="text" name="search")
+        input(type="submit" value="검색")
+    
     ul
         each user in users
             li #{user.name} | #{user.email} | #{user.phonenumber}
