base auth.js & views/auth
base of auth.js and login.pug, signup.pug

--- a/day4-login-hooks-bcrypt/views/partials/header.pug
+++ b/day4-login-hooks-bcrypt/views/partials/header.pug
@@ -6,4 +6,6 @@ header
         li
             a(href="/") home
         li
-            a(href="/watcha/") watcha
+            a(href="/login/") Login
+        li
+            a(href="/signup/") Signup
