init error handling module & error.pug

--- a/day4-login-hooks-bcrypt/views/partials/header.pug
+++ b/day4-login-hooks-bcrypt/views/partials/header.pug
@@ -12,6 +12,6 @@ header
                 a(href="/login/") Login
         if user
             li
-                a(href="/profile/") Profile
+                a(href="/profile/") Profile(#{user.username})
             li
                 a(href="/logout/") Logout
