add application.css & stylesheet in base.pug

--- a/day4-login-hooks-bcrypt/views/base.pug
+++ b/day4-login-hooks-bcrypt/views/base.pug
@@ -2,6 +2,7 @@ doctype html
 
 html
     head
+        link(rel="stylesheet" href="/css/application.css")
         title node.js
     body
         include ./partials/header
