flash messages for signup

--- a/day4-login-hooks-bcrypt/views/base.pug
+++ b/day4-login-hooks-bcrypt/views/base.pug
@@ -6,5 +6,6 @@ html
         title node.js
     body
         include ./partials/header
+        != messages()
         block content
         include ./partials/footer
