--- a/day5-passport/views/posts/list.pug
+++ b/day5-passport/views/posts/list.pug
@@ -6,4 +6,5 @@ block content
 
     ul
         each post in posts
-            li= post.title
+            li
+                a(href="/posts/" + post._id + "/") #{post.title}
